kubernetes/apps/services/pelican/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pelican-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: Pelican
    homepage.shamubernetes.com/description: Game server hosting panel
    homepage.shamubernetes.com/group: Games
    homepage.shamubernetes.com/order: "10"
    homepage.shamubernetes.com/favorite: "true"
    homepage.shamubernetes.com/icon: dashboard-icons:pelican-panel
spec:
  hostnames:
  - pelican.${HOME_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-internal
    namespace: network
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: pelican
      port: 80
